--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a class="nav-link active" aria-current="page" href="#">Qui sommes-nous?</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="page2index.html" target="_blank">Évènements</a>
+            <a class="nav-link" href="index-2.html" target="_blank">Évènements</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
